<resources>
    <string name="app_name">KotlinTest</string>

    <string name="content_description_logo">App logo</string>

    <string name="label_username">Email</string>
    <string name="label_password">Password</string>
    <string name="label_remember_me">Remember me</string>
    <string name="button_login">Log In</string>
    <string name="button_skip">Skip (Debug)</string>

    <string name="error_username_required">Email is required</string>
    <string name="error_username_invalid">Enter a valid email address</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_too_short">Password must be at least 6 characters</string>

    <string name="text_welcome">Welcome, %1$s!</string>
    <string name="text_remembered">You chose to be remembered.</string>
    <string name="button_logout">Log Out</string>
    <string name="button_view_devices">View Devices</string>

    <string name="title_devices">Devices</string>
    <string name="content_description_status_online">Online</string>
    <string name="content_description_status_offline">Offline</string>
    <string name="text_status_online">Status: Online</string>
    <string name="text_status_offline">Status: Offline</string>

    <string name="search_hint_devices">Search devices</string>
    <string name="text_no_devices_found">No devices found</string>

    <string name="content_description_add_device">Add device</string>
    <string name="title_add_device">Add Device</string>
    <string name="label_device_name">Device name</string>
    <string name="label_ip_address">IP address</string>
    <string name="label_device_type">Type</string>
    <string name="label_install_date">Install date (optional)</string>
    <string name="label_online">Online</string>
    <string name="button_save">Save</string>
    <string name="error_name_required">Device name is required</string>
    <string name="error_ip_required">IP address is required</string>
    <string name="text_device_added">Device added</string>

    <string name="content_description_back">Back</string>
    <string name="button_delete">Delete</string>
    <string name="dialog_delete_title">Delete device?</string>
    <string name="dialog_delete_message">This can\'t be undone.</string>
    <string name="dialog_delete_positive">Delete</string>
    <string name="dialog_delete_negative">Cancel</string>
    <string name="text_device_deleted">Device deleted</string>
    <string name="text_type">Type: %1$s</string>

    <string name="title_settings">Settings</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_auto_refresh">Auto-refresh device list</string>
    <string name="text_notification_permission_denied">Notification permission denied</string>
    <string name="navigation_devices">Devices</string>
    <string name="navigation_settings">Settings</string>
</resources>
