...
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_status"
            android:layout_width="12dp"
            android:layout_height="12dp"
            app:layout_constraintBottom_toBottomOf="@id/text_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_name"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_name"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_status"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="server-01" />

        <TextView
            android:id="@+id/text_ip_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
...
