<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_devices"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/navigation_devices" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/navigation_settings" />

</menu>
